--- a/static/js/pybossa/tests/index.html
+++ b/static/js/pybossa/tests/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8" />
-	<title>QUnit/Sinon.JS Test Suite</title>
-	<link rel="stylesheet" href="qunit/qunit/qunit.css">
+    <meta charset="UTF-8" />
+    <title>QUnit/Sinon.JS Test Suite</title>
     <script src="libs/jquery-1.9.0.min.js"></script>
-	<script src="libs/qunit.js"></script>
-	<script src="libs/sinon.js"></script>
-	<script src="libs/sinon-qunit.js"></script>
-	<script src="../pybossa.js"></script>
-	<script src="test.js"></script>
-	<script src="test-non-root.js"></script>
+    <script src="libs/qunit.js"></script>
+    <script src="libs/sinon.js"></script>
+    <script src="libs/sinon-qunit.js"></script>
+    <script src="../pybossa.js"></script>
+    <script src="test.js"></script>
+    <script src="util.js"></script>
 </head>
 <body>
-	<div id="qunit"></div>
-	<div id="qunit-fixture">test markup</div>
+    <div id="qunit"></div>
+    <div id="qunit-fixture">test markup</div>
 </body>
 </html>
